Установил onClick каждой ячейке

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Крестики нолики</h1>
     <div class="area-wrapper">
         <div id="area">
-            <div class="box"></div>
+            <div class="box">ttt</div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
