Появилось окно с объявлением игрока чей ход и счетчик остатка ходов

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container">
+    <div class="por">
+        <p>Ходит:</p>
+        <p id="player"></p>
+        <p1>Осталось ходов:</p1>
+        <p1 id="player__steps"></p1>
+    </div>
     <h1>Крестики нолики</h1>
     <div class="area-wrapper">
         <div id="area">
@@ -21,6 +28,7 @@
             <div class="box"></div>
         </div>
     </div>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
