Добавил кнопку очистки игры

--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крестики нолики</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div class="container">
-    <div class="por">
-        <p>Ходит:</p>
-        <p id="player"></p>
-        <p1>Осталось ходов:</p1>
-        <p1 id="player__steps"></p1>
-    </div>
-    <h1>Крестики нолики</h1>
-    <div class="area-wrapper">
-        <div id="area">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+    <div class="container">
+        <div id="panel">
+            <div class="por">
+                <p>Ходит:</p>
+                <p id="player"></p>
+                <p1>Осталось ходов:</p1>
+                <p1 id="player__steps"></p1>
+            </div>
+            <div id="clean__panel"> 
+                <button id="clean__button">Очистить</button>
+            </div>
+        </div>
+        <h1>Крестики нолики</h1>
+        <div class="area-wrapper">
+            <div id="area">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
         </div>
     </div>
-</div>
     <script src="main.js"></script>
 </body>
+
 </html>
