--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <h1>Крестики нолики</h1>
         <div class="area-wrapper">
             <div id="area">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="box" data-x="1" data-y="1" data-z="11"></div>
+                <div class="box" data-x="1" data-y="2"></div>
+                <div class="box" data-x="1" data-y="3" data-z="12"></div>
+                <div class="box" data-x="2" data-y="1"></div>
+                <div class="box" data-x="2" data-y="2" data-z="10"></div>
+                <div class="box" data-x="2" data-y="3"></div>
+                <div class="box" data-x="3" data-y="1" data-z="12"></div>
+                <div class="box" data-x="3" data-y="2"></div>
+                <div class="box" data-x="3" data-y="3" data-z="11"></div>
             </div>
         </div>
     </div>
