реализовали алгоритмы победы

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div id="clean__panel"> 
                 <button id="clean__button">Очистить</button>
+                <div id="winner__text" style="display: none;"></div>
             </div>
         </div>
         <h1>Крестики нолики</h1>
